--- a/MoboScrap.ui
+++ b/MoboScrap.ui
@@ -31,7 +31,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>40</y>
         <width>1071</width>
         <height>581</height>
        </rect>
@@ -63,11 +63,18 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>310</x>
-        <y>20</y>
+        <x>410</x>
+        <y>10</y>
         <width>59</width>
         <height>14</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
        <string>iTunes</string>
