fetch data by id from ui

--- a/MoboScrap.ui
+++ b/MoboScrap.ui
@@ -85,6 +85,19 @@
          <string>Search</string>
         </property>
        </widget>
+       <widget class="Line" name="line">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>70</y>
+          <width>1031</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
