--- a/MoboScrap.ui
+++ b/MoboScrap.ui
@@ -46,17 +46,17 @@
        <widget class="QTextEdit" name="teId">
         <property name="geometry">
          <rect>
-          <x>70</x>
-          <y>20</y>
+          <x>30</x>
+          <y>30</y>
           <width>71</width>
-          <height>31</height>
+          <height>21</height>
          </rect>
         </property>
        </widget>
        <widget class="QLabel" name="label_2">
         <property name="geometry">
          <rect>
-          <x>30</x>
+          <x>10</x>
           <y>30</y>
           <width>21</width>
           <height>16</height>
@@ -121,6 +121,35 @@
         <column/>
         <column/>
         <column/>
+       </widget>
+       <widget class="QComboBox" name="cbCountries">
+        <property name="geometry">
+         <rect>
+          <x>200</x>
+          <y>30</y>
+          <width>79</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>120</x>
+          <y>30</y>
+          <width>71</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Countries</string>
+        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_3">
